odevzdani/tests/valid_input/ok10.java
class Main {
    static int a = 0b0011;
    static void run() {

    }
}
