odevzdani/tests/invalid_sem/def/def11.java
class Main {
    static int add (int a) {
        String a = "Hello world\n";
    }
    static void run() {}
}
